# pybaseflow

./: .gitignore  README.md  mkdocs.yml  plan_refactor.md  pyproject.toml
baseflow/: estimate.py  separation.py
baseflowx/: __init__.py  estimate.py  io.py  separation.py  tracer.py  utils.py
baseflowx/data/: fish_river.csv
docs/: api.md  generate_figures.py  index.md  installation.md  webapp.md
docs/guides/: cmb-calibration.md  parameter-estimation.md  usgs-data.md
docs/methods/: digital-filters.md  graphical-methods.md  overview.md  recession-analysis.md  tracer-methods.md
plans/: plan_rename.md  plan_webapp.md
pybaseflow/: __init__.py  estimate.py  io.py
pybaseflow/data/: README.md
webapp/: app.py  requirements.txt  streamlit_app.py
webapp/data/: nwis_dv_sites.parquet
webapp/static/css/: app.css
webapp/static/js/: app.js
webapp/templates/: index.html
