[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pybaseflow"
dynamic = ["version"]
description = "A comprehensive Python toolkit for baseflow separation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Nels Jones" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "numpy",
    "numba",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["pybaseflow*"]

[tool.setuptools.dynamic]
version = {attr = "pybaseflow.__version__"}

[tool.setuptools.package-data]
pybaseflow = ["data/*.csv", "data/*.md"]
